# COINES

./: .gitignore  3RD_PARTY_LICENSES.txt  README.md  coines.mk  sensor_list.ini
coines_api/: Makefile  README.md  coines.h
coines_api/mcu_app20/: NOTE.txt  README.md  mcu_app20.c  mcu_app20.h  mcu_app20.mk  mcu_app20_flash.ld  mcu_app20_ram.ld
coines_api/mcu_app30/: NOTE.txt  README.md  mcu_app30.c  mcu_app30.h  mcu_app30.mk
coines_api/pc/: CMakeLists.txt  README.md  coines.c  coines_defs.h  pc.mk
coines_api/pc/comm_driver/: usb.c  usb.h
coines_api/pc/comm_driver/legacy_usb/: legacy_usb_support.c  legacy_usb_support.h
coines_api/pc/comm_intf/: comm_intf.c  comm_intf.h  comm_ringbuffer.c  comm_ringbuffer.h  mutex_port.h
coines_api/pc/python/: LICENSE.txt  Makefile  README.md  setup.py
coines_api/pc/python/coinespy/: __init__.py
coines_api/pc/quirks/: zeus.c  zeus.h
driver/: README.md  bst_coines.rules  install_driver.sh
firmware/: README.md
firmware/app2.0/: DevelopmentDesktop_2.0_Firmware_V3.4.fwu2  update_dd_fw.bat  update_dd_fw.sh
firmware/app3.0/: update_dd_fw.bat  update_dd_fw.sh
template/c/: .cproject  .project  ECLIPSE_ENVIRONMENT.md  Makefile  README.md  template.c  template_APP2.0_debug.launch  template_APP3.0_debug.launch
template/python/: coinespy_test.py  requirements.txt
util/: README.md  app20-flash  app_switch
util/app30-ble-dfu/: Adafruit-nRF52-bootloader_BST_APP3.0.patch  README.md  app30-ble-dfu.py  bosch_sensortec_app30_bootloader-0.3.0-6-g995b977-dirty-nosd.hex  requirements.txt
util/usb-dfu/: build-info.txt
(+72 files in other folders)
